--- a/design/custom.css
+++ b/design/custom.css
@@ -1000,7 +1000,7 @@ h1.H{margin-top:0;}
 .ButtonGroup.Big .Dropdown{-webkit-box-sizing:border-box;-moz-box-sizing:border-box;box-sizing:border-box;width:100%;}
 input,textarea{-webkit-box-sizing:border-box;-moz-box-sizing:border-box;box-sizing:border-box;}input:focus,textarea:focus{background-color:#ffffff;}
 input.DateBox,textarea.DateBox,input.InputBox,textarea.InputBox,input.SmallInput,textarea.SmallInput,input textarea,textarea textarea{font-family:"Helvetica Neue",Helvetica,Arial,sans-serif;}
-input{min-height:28px;}
+input{min-height:30px;}input.InputBox:focus{background-color:#ffffff;}
 .TextBoxWrapper{padding-right:0;}
 .bs-docs-social{text-align:left;padding:0;}.bs-docs-social .Breadcrumbs{display:inline-block;padding:9px 0 11px;}.bs-docs-social .Breadcrumbs .Crumb{font:0/0 a;color:transparent;text-shadow:none;background-color:transparent;border:0;}.bs-docs-social .Breadcrumbs .Crumb:after{font-family:"Helvetica Neue",Helvetica,Arial,sans-serif;color:#595959;font-size:14px;content:"/ ";}
 body>.bs-docs-canvas>.container{padding-top:20px;}
@@ -1022,6 +1022,10 @@ h2.CommentHeading,.MessageForm h2{font-size:24px;line-height:1.2;}
 .OptionsMenu .Flyout:before{border-bottom:7px solid #CCC;}
 .Photo .ProfilePhotoLarge{width:100%;-webkit-box-sizing:border-box;-moz-box-sizing:border-box;box-sizing:border-box;}
 .Thumbnail img{max-width:inherit;}
+.SearchForm{background:rgba(0, 0, 0, 0.05);-webkit-border-radius:4px;-moz-border-radius:4px;border-radius:4px;margin-top:0;padding:10px;}.SearchForm form{margin-bottom:0;}
+.SearchForm .SiteSearch{max-width:100%;}
+.SearchForm input.InputBox{margin:0;padding-right:77px;-webkit-border-radius:3px;-moz-border-radius:3px;border-radius:3px;}
+.SearchForm input.btn{float:right;width:70px;position:relative;margin-top:-30px;-webkit-border-radius:0 3px 3px 0;-moz-border-radius:0 3px 3px 0;border-radius:0 3px 3px 0;}
 .MeBox{display:inline-block;margin:0;}.MeBox .WhoIs,.MeBox .Username,.MeBox .MeMenu{display:inline-block;}
 .MeBox .Username{padding:10px 8px 11px;}
 .MeBox .MeMenu{padding:8px;}
@@ -1044,7 +1048,7 @@ h2.CommentHeading,.MessageForm h2{font-size:24px;line-height:1.2;}
 #Popup .Border{padding:0;}
 #Popup .Body{padding:0;}
 #Popup .modal-header{padding:19px 15px;}
-#Popup .Content .modal-header{font-size:24px;font-weight:bold;line-height:40px;margin:-15px -15px 15px;}
+#Popup .Content .modal-header{font-size:24px;font-weight:bold;line-height:40px;margin-bottom:0;}
 #Popup .Footer{padding:14px 15px 15px;margin-bottom:0;text-align:right;background-color:#f5f5f5;border-top:1px solid #ddd;-webkit-border-radius:0 0 6px 6px;-moz-border-radius:0 0 6px 6px;border-radius:0 0 6px 6px;-webkit-box-shadow:inset 0 1px 0 #ffffff;-moz-box-shadow:inset 0 1px 0 #ffffff;box-shadow:inset 0 1px 0 #ffffff;*zoom:1;}#Popup .Footer:before,#Popup .Footer:after{display:table;content:"";line-height:0;}
 #Popup .Footer:after{clear:both;}
 #Popup .Footer .btn+.btn{margin-left:5px;margin-bottom:0;}
@@ -1053,3 +1057,16 @@ h2.CommentHeading,.MessageForm h2{font-size:24px;line-height:1.2;}
 #Popup .close{font-size:22px;}
 #Popup p{padding:0;}
 #bootstrap-container .Errors ul,#Popup .Errors ul{padding:8px 35px 8px 14px;margin-bottom:20px;text-shadow:0 1px 0 rgba(255, 255, 255, 0.5) !important;background-color:#f2dede !important;border:1px solid #eed3d7 !important;-webkit-border-radius:4px !important;-moz-border-radius:4px !important;border-radius:4px !important;color:#b94a48 !important;}#bootstrap-container .Errors ul li,#Popup .Errors ul li{background-color:transparent !important;color:#b94a48 !important;}
+#Popup .SingleEntryMethod input{max-width:100%;width:100%;margin-bottom:0;}#Popup .SingleEntryMethod input[type="password"]{margin-bottom:0;padding-right:77px;}
+#Popup .SingleEntryMethod input[type="checkbox"]{width:auto;float:left;margin:0;height:30px;}
+#Popup .SingleEntryMethod label{margin-bottom:9px;}
+#Popup .SingleEntryMethod li{clear:both;}
+#Popup .SingleEntryMethod input.btn{width:auto;float:right;}
+#Popup .SingleEntryMethod .Buttons{width:100%;line-height:30px;margin-top:9px;}
+#Popup .SingleEntryMethod #Form_User_SignIn{margin:0 auto;padding:0 15px;max-width:350px;}#Popup .SingleEntryMethod #Form_User_SignIn a.ForgotPassword{float:right;position:relative;margin-top:-30px;-webkit-border-radius:0 3px 3px 0;-moz-border-radius:0 3px 3px 0;border-radius:0 3px 3px 0;}
+#Popup .SingleEntryMethod #Form_User_SignIn .CreateAccount{clear:both;color:rgba(0, 0, 0, 0.5);}
+#Popup .SingleEntryMethod #Form_User_Password{margin:0 auto;padding:0 15px;max-width:350px;}#Popup .SingleEntryMethod #Form_User_Password .btn{-webkit-box-sizing:border-box;-moz-box-sizing:border-box;box-sizing:border-box;}
+#Popup .SingleEntryMethod #Form_User_Password .Buttons{overflow:auto;}
+#Popup .SingleEntryMethod #Form_User_Password a.ForgotPassword{margin-left:0;float:left;}
+.Entry.register #content input{width:100%;}.Entry.register #content input[type="radio"],.Entry.register #content input[type="checkbox"]{width:auto;height:18px;margin-right:2px;}
+.Entry.register #content .FormWrapper{padding:15px 25px;-webkit-border-radius:5px;-moz-border-radius:5px;border-radius:5px;}
