Upgrade to latest Bootstrap codebase and a few fixes

--- a/design/main.less
+++ b/design/main.less
@@ -33,6 +33,8 @@
 	
 	h1, h2, h3, h4, h5, h6 { font-weight: 300; }
 	h1.H { margin-top: 0; }
+	
+	form { margin: 0; }
 
 
 // Buttons, Inputs and Textareas
@@ -166,7 +168,6 @@
 		.border-radius(0 3px 3px 0); }
 	}
 	
-	
 
 // Sidebar Pane
 // --------------------------------------------------------------------------------------------------- //
@@ -190,7 +191,7 @@
 		}
 	}
 	.Profile .MeBox { display: inline-block; }
-	.MeBox-SignIn { display: none; }
+	.MeBox-SignIn { display: none !important; }
 	
 	// Filter Menu
 	// ----------------------------------------------------------------------------------------------- //
