--- a/design/custom.css
+++ b/design/custom.css
@@ -978,10 +978,11 @@ form.bs-docs-example{padding-bottom:19px;}
 .responsive-utilities-test span{position:absolute;top:-1px;left:-1px;right:-1px;bottom:-1px;-webkit-border-radius:4px;-moz-border-radius:4px;border-radius:4px;}
 .responsive-utilities-test span{color:#468847;background-color:#dff0d8;border:1px solid #d6e9c6;}
 @media (min-width:1210px){.bs-docs-container{max-width:970px;}}@media (max-width:980px){body>.navbar-fixed-top .brand{float:left;margin-left:0;padding-left:10px;padding-right:10px;} .quick-links li{display:inline-block;margin:5px;}}@media (min-width:768px) and (max-width:980px){body{padding-top:0;} .jumbotron{margin-top:-20px;}}@media (max-width:768px){body{padding-top:0;} .jumbotron{padding:40px 20px;margin-top:-20px;margin-right:-20px;margin-left:-20px;} .masthead h1{font-size:90px;} .masthead p,.masthead .btn{font-size:24px;} .marketing .span4{margin-bottom:40px;} .bs-docs-social{margin:0 -20px;} .show-grid [class*="span"]{margin-bottom:5px;} .footer p{margin-bottom:9px;}}@media (max-width:480px){body{padding-top:0;} h2 small{display:block;} .jumbotron h1{font-size:60px;} .jumbotron p,.jumbotron .btn{font-size:20px;} .jumbotron .btn{display:block;margin:0 auto;} .subhead h1,.subhead p{text-align:center;} .marketing h1{font-size:40px;} .example-sites{margin-left:0;} .example-sites>li{float:none;display:block;max-width:280px;margin:0 auto 18px;text-align:center;} .example-sites .thumbnail>img{max-width:270px;} table code{white-space:normal;word-wrap:break-word;word-break:break-all;} .modal-example .modal{position:relative;top:auto;right:auto;bottom:auto;left:auto;} .footer .pull-right{float:none;}}.span3{min-height:1px;}
-.bs-docs-sidenav{width:218px;margin-top:30px;padding:0;margin-right:10px;background-color:#fff;border:1px solid #e5e5e5;margin-left:0;-webkit-border-radius:6px;-moz-border-radius:6px;border-radius:6px;}
-.bs-docs-sidenav>li>a{margin:0;font-size:14px;padding:9px 14px;border-top:1px solid #eee;}
-.bs-docs-sidenav>li:first-child>a{border-top:0;-webkit-border-radius:5px 5px 0 0;-moz-border-radius:5px 5px 0 0;border-radius:5px 5px 0 0;}
-.bs-docs-sidenav>li:last-child>a{-webkit-border-radius:0 0 5px 5px;-moz-border-radius:0 0 5px 5px;border-radius:0 0 5px 5px;}
+.bs-docs-sidenav{width:218px;margin-top:30px;padding:0;margin-right:10px;background-color:#fff;margin-left:0;-webkit-border-radius:6px;-moz-border-radius:6px;border-radius:6px;-webkit-box-shadow:0 1px 3px rgba(0, 0, 0, 0.05);-moz-box-shadow:0 1px 3px rgba(0, 0, 0, 0.05);box-shadow:0 1px 3px rgba(0, 0, 0, 0.05);}
+.bs-docs-sidenav>li>a{margin:0 0 -1px;font-size:14px;padding:9px 14px;border:1px solid #e5e5e5;}
+.bs-docs-sidenav>li:first-child>a{-webkit-border-radius:6px 6px 0 0;-moz-border-radius:6px 6px 0 0;border-radius:6px 6px 0 0;}
+.bs-docs-sidenav>li:last-child>a{-webkit-border-radius:0 0 6px 6px;-moz-border-radius:0 0 6px 6px;border-radius:0 0 6px 6px;}
+.bs-docs-sidenav>.active>a{border-color:#08c;position:relative;z-index:2;}
 .bs-docs-sidenav .icon-chevron-right{float:right;margin-top:2px;margin-right:-6px;opacity:.25;}
 .bs-docs-sidenav>li>a:hover{background-color:#f5f5f5;}
 .bs-docs-sidenav a:hover .icon-chevron-right{opacity:.5;}
@@ -992,6 +993,7 @@ a:hover{text-decoration:none;}
 ol,ul{margin:0;}
 h1,h2,h3,h4,h5,h6{font-weight:300;}
 h1.H{margin-top:0;}
+form{margin:0;}
 .BigButton.btn{display:block;}
 .ButtonGroup .btn{-webkit-box-sizing:border-box;-moz-box-sizing:border-box;box-sizing:border-box;height:30px;}
 .ButtonGroup .btn:first-child{display:block;margin-right:25px;}
@@ -1036,7 +1038,7 @@ h2.CommentHeading,.MessageForm h2{font-size:24px;line-height:1.2;}
 .MeBox .Flyout:before,.MeBox .Flyout:after{right:9px;left:auto;}
 .MeBox .Flyout:before{border-bottom:7px solid #CCC;}
 .Profile .MeBox{display:inline-block;}
-.MeBox-SignIn{display:none;}
+.MeBox-SignIn{display:none !important;}
 .FilterMenu{margin-top:20px;margin-right:0;}.FilterMenu .Aside{float:right;}
 .FilterMenu i:before{font-weight:bold;}
 .Box h4{border-bottom:1px solid rgba(0, 0, 0, 0.05);padding-bottom:5px;margin-bottom:10px;margin-top:0;}
